--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -3,7 +3,6 @@
 @tailwind utilities;
 
 * {
-  max-width: 102.4rem;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,4 +10,10 @@
 
 #root {
   font-size: 62.5%;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100vh;
 }
